# sjasmplus

./: .cirrus.yml  .gitattributes  .gitignore  .gitmodules  .lgtm.yml  CHANGELOG.md  CMakeLists.txt  COPYING  INSTALL  INSTALL.md  Makefile  Makefile.am  Makefile.osx  Makefile.win  README  README.md  SECURITY.md  TODO.txt  asm-z80-sj.xml  configure  configure.ac  copilot_plan.txt  deb_plan.txt  directives.cpp  directives.h  io_snapshots.cpp  io_tape.cpp  io_tape.h  io_trd.cpp  io_trd.h  makefile.win32  parser.cpp  parser.h  reader.cpp  reader.h  sjasm.cpp  sjasm.h  sjasmplus.cbp  sjasmplus.kdev4  sjasmplus.rc  (+13 more)
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug.md  feature-request.md
.github/workflows/: ci.yml  cmake.yml  codeql-analysis.yml  hercules_charts.yml  reproducibility.yml  windows-cmake.yml
ContinuousIntegration/: Dockerfile.reprotest  build_tests_in_place.sh  common_fn.sh  coveralls.yml  examples_ignore.txt  remote_curl_build.sh  test_folder_examples.sh  test_folder_tests.sh  winbuild.bat  winbuild_mingw.bat  winbuild_mingw32.bat  winbuild_mingw32_examples.bat  winbuild_mingw32_tests.bat  winbuild_mingw_examples.bat  winbuild_mingw_tests.bat  winbuild_priority_for_git_path.bat  winbuild_set_msys2_path.bat  winbuild_vs15_2017.bat  winbuild_vs2019.bat
cmake/modules/: FindTolua++.cmake
cpp-src-tests/: ut_devices.cpp  ut_io.cpp  ut_io_trd.cpp  ut_labels.cpp  ut_listing.cpp  ut_misc.cpp
crc32c/: README.txt  crc32c.cpp  crc32c.h
debian/: .gitignore  README.source  changelog  clean  control  copyright  gbp.conf  rules  salsa-ci.yml  sjasmplus.doc-base  sjasmplus.docs  watch
debian/source/: options
debian/tests/: control  example-relocation
debian/upstream/: metadata
docs/: README.md  docbook-xsl-ns-html-customization-linux.xsl  docbook-xsl-ns-html-customization-osx.xsl  docbook-xsl-ns-html-customization.xsl  docbook.css  documentation.cfg  documentation.html  documentation.xml  index.html
dos/: compile.bat
examples/3color/: 3color.asm  killerbean2.$c
examples/BasicLib/: BasicLib.asm  Example-code-in-rem.asm  Example-goto-restore.asm  Example-line-numbering.asm  Example-simple-loader.asm
examples/SymbOS_nslookup/: #readme.txt  Cmd-NsLookUp-sj.asm  adaptation.patch  nslookup.com
examples/TapLib/: Example.asm  TapLib.asm
examples/chargfx2asm/: ZX Courier.ch8  chargfx2asm.script.asm
examples/file name test/: option zxnext ignore.asm  option zxnext.asm  option zxnext.options
examples/frost4k/: frost10.asm  samples.asm
examples/relocation/: relocate.tap  relocation_basic.i.asm  relocation_main.asm
examples/sj_tutorial/: tutorial.asm
examples/zxfire/: Makefile  fire.asm
lua5.1/: CMakeLists.txt  _lzio.patch  lauxlib.c  loadlib.c  lua5.1.def
lua5.4/: CMakeLists.txt
lua5.5/: CMakeLists.txt
resources/: SaveTAP_ZX_Spectrum_128K.txt  SaveTAP_ZX_Spectrum_256K.bin.h  SaveTAP_ZX_Spectrum_256K.txt  SaveTAP_ZX_Spectrum_48K.bin.h  SaveTAP_ZX_Spectrum_48K.txt
resources/bin2c/: bin2c.cpp  bin2c.vcproj
sjasm/: devices.cpp  devices.h  directives.cpp  directives.h  io_cpc.cpp  io_cpc.h  io_cpc_ldrs.h  io_err.cpp  io_err.h  io_nex.cpp  io_nex.h  io_snapshots.cpp  io_snapshots.h  io_tape.cpp  io_tape.h  io_tape_ldrs.h  io_trd.cpp  io_trd.h  io_tzx.cpp  io_tzx.h  lua_lpack.c  lua_lpack.h  lua_sjasm.cpp  lua_sjasm.h  lua_sjasm.pkg  parser.cpp  parser.h  portable_endian.h  reader.cpp  reader.h  relocate.cpp  relocate.h  sjasm.cpp  sjasm.h  sjdefs.h  sjio.cpp  sjio.h  support.cpp  support.h  tables.cpp  (+5 more)
sjasmwin32/: README.md  mingw.res.bat  sjasmplus.cbp.rc  sjasmplus.mingw.rc  sjasmplus.rc  sjasmplus.res  sjasmwin32.cpp  sjasmwin32.h
tests/: Issue144_disp_longptr.options  LICENSE.md  README.md  ifused_test.asm  ifused_test.lst  macro_test.asm  macro_test.lst  savetap_test.asm  savetap_test.tap  struct_test.asm  tapout_test.asm  tapout_test.tap
tests/build script and options tests/: option zxnext.asm  option zxnext.lst  option zxnext.options
tests/define/: define_vs_value_substitution.asm  define_vs_value_substitution.lst  disabling_subword_subs.asm  disabling_subword_subs.lst  glue.asm  glue.lst  issue135_errors_counting.asm  issue135_errors_counting.lst  predefined_base_file.asm  predefined_base_file.i.asm  predefined_counter.asm  predefined_counter.lst  predefined_date_time.asm  predefined_include_level.asm  predefined_pass.asm  predefined_pass.lst  redefine.asm
tests/devices/: Issue144_disp_crash.asm  Issue144_disp_crash.lst  cpc464.asm  cpc464.lst  cpc464_savesna.asm  cspectmap.asm  cspectmap.lbl  cspectmap.lst  cspectmap.sym  cspectmap_multi_device.asm  cspectmap_multi_device.lbl  cspectmap_multi_device.sym  disp.asm  disp.lst  dispB.asm  dispB.lst  get_label_page_operator.asm  get_label_page_operator.lst  get_label_page_operator.sym  get_label_physical_memory_operators.asm  incbin_issue323.asm  incbin_issue323.lst  misc_device_directives.asm  misc_device_directives.lst  mmu.asm  mmu.lbl  mmu.lst  mmu_incbin_bug.asm  mmu_incbin_bug_data.i.asm  next_device.asm  next_device.lst  noslot64k_device.asm  noslot64k_device.lst  org_page.asm  org_page.lst  readWordFromMem.asm  readWordFromMem.lst  savebin.asm  savebin.lst  savesna_128kwarning.asm  (+11 more)
tests/docs_examples/: c_structures.asm  c_structures.tap  po_defarray.asm  po_defarray_B.asm  po_disp.asm  po_display.asm  po_display.lst  po_display.msglst  po_dot_repeat.asm  po_dot_repeat.lst  po_mmu.asm  po_mmu.lbl  po_mmu.lst  po_module.asm  po_module.lst  po_opt.asm  po_opt.lst  po_org.asm  po_org.msglst  s_assembling_process_example.asm  s_assembling_process_example.lst  s_at_labels.asm  s_at_labels.lst  s_local_labels.asm  s_local_labels.lst  s_macros.asm  s_macros.lst  s_predefined.asm  s_predefined.lst  s_realdevice.asm  s_savenex_examples.asm  s_temp_labels.asm  st_text.asm  st_usage_example.asm  st_usage_example.lst  st_usage_example_6_5.asm  st_usage_example_6_5.lst
tolua++/: CMakeLists.txt  tolua++-1.0.92.tar.bz2  tolua++.h  tolua_event.c  tolua_is.c  tolua_map.c  tolua_push.c
trunk/: sjasmplus.cbp  sjasmplus.sln  sjasmwin32.vcproj
(+1121 files in other folders)
